--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 </head>
 <body>
     <div class="header">
-    <input type="text" id='first'> +
-    <input type="text" id='second'>
-    <button>count</button>
+    <h3>
+        Enter the password :
+    </h3>
+    <input type="text" id='first'>
+    <button onclick="isClick()">Check</button>
     </div>
 
     <p></p>
